--- a/build.gradle
+++ b/build.gradle
@@ -1,70 +1,40 @@
 plugins {
-	id "java"
-	id "eclipse"
-	id "idea"
-	id "fabric-loom" version "0.2.6-SNAPSHOT"
-	id "maven-publish"
+	id 'fabric-loom' version '0.2.7-SNAPSHOT'
+	id 'maven-publish'
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
-// Elytra version format - notes branch, commit count, and dirty in version string
-def branch
-if (System.env.BRANCH_NAME) {
-	// CI support
-	branch = System.env.BRANCH_NAME
-	branch = branch.substring(branch.lastIndexOf("/")+1)
-} else {
-	branch = "git rev-parse --abbrev-ref HEAD".execute().in.text.trim()
-}
-if (branch == "HEAD") {
-	branch = "git rev-parse --short HEAD".execute().in.text.trim()
-}
-def commits
-if (System.env.RUN_COUNT) {
-	//CI support, for some reason github actions doesn't like getting the rev-list count
-	commits = System.env.RUN_COUNT
-} else {
-	commits = "git rev-list --count HEAD".execute().in.text.trim()
-}
-def dirty = !"git diff-index HEAD".execute().in.text.trim().isEmpty()
+archivesBaseName = project.archives_base_name
+version = project.mod_version + "+" + project.minecraft_version
+group = project.maven_group
 
-archivesBaseName = "${project.archives_base_name}"
-group = "${project.maven_group}"
-version = branch + "-${project.mod_version}" + "." + commits + (dirty ? "-dirty" : "") + "+${project.minecraft_version}"
-def modVersion = "${project.mod_version}" + "-" + commits + "+${project.minecraft_version}" // semver-compatible version string for use in fabric.mod.json
-def modRepo
-if (System.env.REPO_NAME) {
-	modRepo = System.env.REPO_NAME
-} else {
-	modRepo = "FabLabsMC/${project.archives_base_name}"
+if (System.env.RUN_COUNT) { // only change version if we're in github's workflow environment - full releases shouldn't have the +build
+	version = project.mod_version + "-" + System.env.RUN_COUNT // automatically increments every time the workflow runs, but won't affect fabric.mod.json dependencies
 }
 
 minecraft {
 }
 
-repositories {
-	mavenCentral()
-	maven { url "http://maven.fabricmc.net/" } // Fabric maven - home of Fabric API and ModMenu
-}
-
 dependencies {
+	//to change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.minecraft_version}+build.${project.yarn_build}:v2"
+	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	// compileOnly "com.google.code.findbugs:jsr305:3.0.2" //TODO: what are we going to do for annotations?
+	
+	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
+	modImplementation "io.github.prospector:modmenu:${project.modmenu_version}"
 }
 
 processResources {
-	inputs.property "version", modVersion
-	inputs.property "id", project.archivesBaseName
-	inputs.property "repo", modRepo
+	inputs.property "version", project.version
+
 	from(sourceSets.main.resources.srcDirs) {
 		include "fabric.mod.json"
-		expand version: modVersion, id: project.archivesBaseName, repo: modRepo
+		expand "version": project.version
 	}
+
 	from(sourceSets.main.resources.srcDirs) {
 		exclude "fabric.mod.json"
 	}
@@ -93,12 +63,12 @@ jar {
 publishing {
 	repositories {
 		maven {
-		    name = "GitHubPackages"
-		    url = uri("https://maven.pkg.github.com/" + modRepo.toLowerCase())
-		    credentials {
-			username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
-			password = project.findProperty("gpr.key") ?: System.getenv("PASSWORD")
-		    }
+			name = "GitHubPackages"
+			url = uri("https://maven.pkg.github.com/synthrose/art-of-alchemy")
+			credentials {
+				username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+				password = project.findProperty("gpr.key") ?: System.getenv("PASSWORD")
+			}
 		}
 		// uncomment to publish to the local maven
 		// mavenLocal()
@@ -106,7 +76,10 @@ publishing {
 	publications {
 		mavenJava(MavenPublication) {
 			// add all the jars that should be included when publishing to maven
-			artifact(remapJar) {
+			artifact(jar) {
+				builtBy remapJar
+			}
+			artifact("${project.buildDir.absolutePath}/libs/${archivesBaseName}-${project.version}.jar"){
 				builtBy remapJar
 			}
 			artifact(sourcesJar) {
